feat: add CUDA system requirements for scgen feature in Dockerfile

--- a/docker_containers/single_cell_perturbation_modelling/Dockerfile
+++ b/docker_containers/single_cell_perturbation_modelling/Dockerfile
@@ -48,6 +48,9 @@ pertpy = "*"
 [tool.pixi.feature.scpram]
 system-requirements = {cuda = "11.6"}
 
+[tool.pixi.feature.scgen]
+system-requirements = {cuda = "12"}
+
 [tool.pixi.environments]
 scpram = ["scpram"]
 scgen = ["scgen"]
