--- a/.devcontainer/single_cell_perturbation_modelling/devcontainer.json
+++ b/.devcontainer/single_cell_perturbation_modelling/devcontainer.json
@@ -2,34 +2,11 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
   "name": "single_cell_perturbation_modelling",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  // "image": "mcr.microsoft.com/devcontainers/base:jammy",
-  // "dockerComposeFile": [
-  //   "../../docker-compose.yml"
-  // ],
-  // "service": "plotting",
-  // "workspaceFolder": "/home/macomics",
-  // "shutdownAction": "none",
+
   "mounts": [
     "source=/home/witham/training_courses,target=/home/witham/training_courses,type=bind,consistency=cached"
   ],
-  // add mount points if they exist
-  // "mounts": [
-  //   {
-  //     "source": "/home/macomics",
-  //     "target": "/home/macomics",
-  //     "type": "bind",
-  //     "consistency": "cached",
-  //     "if": "fileExists('/home/macomics')"
-  //   },
-  //   {
-  //     "source": "/mnt/d/Macomics_SW",
-  //     "target": "/mnt/d/Macomics_SW",
-  //     "type": "bind",
-  //     "consistency": "cached",
-  //     "if": "fileExists('/mnt/d/Macomics_SW')"
-  //   }
-  // ],
+
   "build": {
     "dockerfile": "Dockerfile"
   },
@@ -67,7 +44,7 @@
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "git config --global --add safe.directory /workspaces/ismb2025 && cd /workspaces/ismb2025 && R --no-save -e 'precommit::autoupdate()' && pre-commit install && pre-commit autoupdate"
+  "postCreateCommand": "git config --global --add safe.directory /workspaces/ismb2025 && cd /workspaces/ismb2025 && pre-commit install && pre-commit autoupdate"
   // "postCreateCommand": "uname -a",
   // Configure tool-specific properties.
   // "customizations": {},
