fix: add pertpy dependency for scgen feature in Dockerfile

--- a/docker_containers/single_cell_perturbation_modelling/Dockerfile
+++ b/docker_containers/single_cell_perturbation_modelling/Dockerfile
@@ -48,6 +48,7 @@ scpram = "*"
 [tool.pixi.feature.scgen.pypi-dependencies]
 scgen = "*"
 torch = "*"
+pertpy = "*"
 
 # # Feature Definitions for CUDA
 # [tool.pixi.feature.scpram]
