--- a/.devcontainer/single_cell_perturbation_modelling/Dockerfile
+++ b/.devcontainer/single_cell_perturbation_modelling/Dockerfile
@@ -13,7 +13,7 @@ RUN apt install -y git
 # RUN pixi add ipykernel ruff pre-commit
 
 # RUN uv pip install jupyter-client --system
-RUN pixi global install jupyter_client ruff pre-commit ipykernel
+RUN pixi global install jupyter_client ruff pre-commit ipykernel dvc
 
 # Generate locale to fix locale warnings
 RUN locale-gen en_US.UTF-8 
