--- a/docker_containers/cell_comm/Dockerfile
+++ b/docker_containers/cell_comm/Dockerfile
@@ -49,6 +49,9 @@ install-rkernel = "R -e 'IRkernel::installspec()'"
 install-scseqcomm = "R -e 'remotes::install_gitlab(\"sysbiobig/scseqcomm\")'"
 install-add2ggplot = "R -e 'pak::pkg_install(\"github::JiaxiangBU/add2ggplot\")'"
 install-crosstalker = "R -e 'pak::pkg_install(\"github::CostaLab/CrossTalkeR\")'"
+install-twosamplemr = "R -e 'pak::pkg_install(\"github::MRCIEU/TwoSampleMR\")'"
+install-mrinstruments = "R -e 'pak::pkg_install(\"github::MRCIEU/MRInstruments\")'"
+install-gwasglue = "R -e 'pak::pkg_install(\"github::mrcieu/gwasglue\")'"
 
 # install_all task to install all tasks
 install-all = { depends-on =[
@@ -116,7 +119,7 @@ RUN locale-gen en_US.UTF-8
 # ENV LANGUAGE=en_US.UTF-8
 
 # add R dependencies using pixi add
-RUN pixi add r-devtools r-biocmanager r-remotes r-base r-roxygen2 r-testthat r-usethis r-argparser r-ggplot2 r-data.table r-svglite r-rcpp r-future bioconductor-edger r-dplyr r-matrix r-purrr r-box r-seurat r-bit64 r-openxlsx r-ape r-pheatmap r-ggpubr r-qs r-markdown r-ggnewscale r-emmeans r-multcomp r-readxl r-progress r-ggalt r-ggprism r-hdf5r r-pak bioconductor-geoquery bioconductor-biomart r-essentials mmseqs2 ipykernel r-git2r r-languageserver r-precommit r-rzmq r-irkernel r-irdisplay dvc "pygraphviz==1.14" mudata umap-learn "scanpy==1.10.4" bioconductor-gosemsim r-ggfun r-ggplotify bioconductor-org.hs.eg.db bioconductor-org.Mm.eg.db r-scico r-psych r-chorddiag r-domc r-gtools r-tictoc bioconductor-mast r-bigmemory r-bh r-effsize r-doparallel r-dorng bioconductor-clusterprofiler r-rcurl bioconductor-omnipathr r-knitr r-ggalluvial r-dt r-scales r-htmltools r-factoextra r-colorblindness bioconductor-complexheatmap r-extrafont r-ggridges r-ggnewscale r-gtools r-ggsci r-rstatix r-qpdf bioconductor-enhancedvolcano r-patchwork r-magick r-zeallot r-rcolorbrewer r-magrittr bioconductor-fgsea r-cellchat
+RUN pixi add r-devtools r-biocmanager r-remotes r-base r-roxygen2 r-testthat r-usethis r-argparser r-ggplot2 r-data.table r-svglite r-rcpp r-future bioconductor-edger r-dplyr r-matrix r-purrr r-box r-seurat r-bit64 r-openxlsx r-ape r-pheatmap r-ggpubr r-qs r-markdown r-ggnewscale r-emmeans r-multcomp r-readxl r-progress r-ggalt r-ggprism r-hdf5r r-pak bioconductor-geoquery bioconductor-biomart r-essentials mmseqs2 ipykernel r-git2r r-languageserver r-precommit r-rzmq r-irkernel r-irdisplay dvc "pygraphviz==1.14" mudata umap-learn "scanpy==1.10.4" bioconductor-gosemsim r-ggfun r-ggplotify bioconductor-org.hs.eg.db bioconductor-org.Mm.eg.db r-scico r-psych r-chorddiag r-domc r-gtools r-tictoc bioconductor-mast r-bigmemory r-bh r-effsize r-doparallel r-dorng bioconductor-clusterprofiler r-rcurl bioconductor-omnipathr r-knitr r-ggalluvial r-dt r-scales r-htmltools r-factoextra r-colorblindness bioconductor-complexheatmap r-extrafont r-ggridges r-ggnewscale r-gtools r-ggsci r-rstatix r-qpdf bioconductor-enhancedvolcano r-patchwork r-magick r-zeallot r-rcolorbrewer r-magrittr bioconductor-fgsea r-cellchat r-ieugwasr bioconductor-variantannotation
 #numpy matplotlib seaborn pandas polars biopython
 
 # Install PyPI dependencies from pyproject.toml
