fix: correct formatting of ai_lcm dependencies section in Dockerfile

--- a/docker_containers/single_cell_perturbation_modelling/Dockerfile
+++ b/docker_containers/single_cell_perturbation_modelling/Dockerfile
@@ -45,13 +45,15 @@ ipykernel = "*"
 pytorch-gpu = "*"
 pertpy = "*"
 
-[[tool.pixi.feature.ai_lcm.dependencies]]
+[tool.pixi.feature.ai_lcm.dependencies]
+python = "==3.11"
 accelerate = "*"
 captum = "*"
 scanpy = "*"
 loguru = "*"
 transformers = "==4.30.2"
 pytorch-gpu = "*"
+
 [tool.pixi.feature.ai_lcm.pypi-dependencies]
 torchkeras = "*"
 
