--- a/docker_containers/single_cell_perturbation_modelling/Dockerfile
+++ b/docker_containers/single_cell_perturbation_modelling/Dockerfile
@@ -45,7 +45,7 @@ ipykernel = "*"
 pytorch-gpu = "*"
 pertpy = "*"
 
-[tool.pixi.feature.ai_lcm.dependencies]
+[tool.pixi.feature.ailcm.dependencies]
 python = "==3.11"
 accelerate = "*"
 captum = "*"
@@ -54,7 +54,7 @@ loguru = "*"
 transformers = "==4.30.2"
 pytorch-gpu = "*"
 
-[tool.pixi.feature.ai_lcm.pypi-dependencies]
+[tool.pixi.feature.ailcm.pypi-dependencies]
 torchkeras = "*"
 
 
@@ -75,13 +75,13 @@ scgen = "*"
 [tool.pixi.feature.scgen.system-requirements]
 cuda = "12"
 
-[tool.pixi.feature.ai_lcm.system-requirements]
+[tool.pixi.feature.ailcm.system-requirements]
 cuda = "12"
 
 [tool.pixi.environments]
 scpram = ["scpram"]
 scgen = ["scgen"]
-ai_lcm = ["ai_lcm"]
+ailcm = ["ailcm"]
 
 [tool.pixi.tasks]
 install-kernel = "python -m ipykernel install --user --name pixi-env --display-name 'Pixi Env'"
@@ -149,7 +149,7 @@ RUN locale-gen en_US.UTF-8
 # Install PyPI dependencies from pyproject.toml
 RUN pixi install --manifest-path pyproject.toml --environment scgen --verbose
 RUN pixi install --manifest-path pyproject.toml --environment scpram --verbose
-RUN pixi install --manifest-path pyproject.toml --environment ai_lcm --verbose
+RUN pixi install --manifest-path pyproject.toml --environment ailcm --verbose
 
 
 
@@ -158,7 +158,7 @@ RUN pixi install --manifest-path pyproject.toml --environment ai_lcm --verbose
 # Run specific tasks that you want in the container
 RUN pixi run -e scpram install-all
 RUN pixi run -e scgen install-all
-RUN pixi run -e ai_lcm install-all
+RUN pixi run -e ailcm install-all
 
 # Place executables in the environment at the front of the path
 # ENV PATH="/project/.pixi/envs/cuda/bin:/project/.pixi/envs/default/bin:$PATH"
