fix: add missing ipywidgets and ipykernel dependencies for ailcm feature

--- a/docker_containers/single_cell_perturbation_modelling/Dockerfile
+++ b/docker_containers/single_cell_perturbation_modelling/Dockerfile
@@ -47,6 +47,8 @@ pertpy = "*"
 
 [tool.pixi.feature.ailcm.dependencies]
 python = "==3.11"
+ipywidgets = "*"
+ipykernel = "*"
 accelerate = "*"
 captum = "*"
 scanpy = "*"
