feat: add cell-gears dependency for ailcm feature

--- a/docker_containers/single_cell_perturbation_modelling/Dockerfile
+++ b/docker_containers/single_cell_perturbation_modelling/Dockerfile
@@ -58,6 +58,7 @@ pytorch-gpu = "*"
 
 [tool.pixi.feature.ailcm.pypi-dependencies]
 torchkeras = "*"
+cell-gears = "*"
 
 
 [tool.pixi.feature.scpram.pypi-dependencies]
