feat: add scmulan dependency for ailcm feature in Dockerfile

--- a/docker_containers/single_cell_perturbation_modelling/Dockerfile
+++ b/docker_containers/single_cell_perturbation_modelling/Dockerfile
@@ -59,6 +59,7 @@ pytorch-gpu = "*"
 [tool.pixi.feature.ailcm.pypi-dependencies]
 torchkeras = "*"
 cell-gears = "*"
+scmulan = {git = "https://github.com/SuperBianC/scMulan.git", branch = "main"}
 
 
 [tool.pixi.feature.scpram.pypi-dependencies]
@@ -153,14 +154,6 @@ RUN locale-gen en_US.UTF-8
 RUN pixi install --manifest-path pyproject.toml --environment scgen --verbose
 RUN pixi install --manifest-path pyproject.toml --environment scpram --verbose
 RUN pixi install --manifest-path pyproject.toml --environment ailcm --verbose
-
-# Install scMulan in the ailcm environment
-RUN git clone https://github.com/SuperBianC/scMulan.git /tmp/scMulan && \
-    pixi run -e ailcm python -m pip install --upgrade pip && \
-    pixi run -e ailcm pip install -r /tmp/scMulan/requirements.txt && \
-    pixi run -e ailcm pip install /tmp/scMulan
-
-
 
 
 # Run specific tasks that you want in the container
